--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,29 +9,29 @@
     "orientation": "portrait",
     "icons": [
       {
-        "src": "img/roamora.webp",
+        "src": "img/roamora1.png",
         "sizes": "192x192",
         "type": "image/png"
       },
       {
-        "src": "img/roamora.webp",
+        "src": "img/roamora1.png",
         "sizes": "512x512",
         "type": "image/png"
       },
       {
-        "src": "img/roamora.webp",
+        "src": "img/roamora1.png",
         "sizes": "1024x1024",
         "type": "image/png"
       }
     ],
     "screenshots": [
       {
-        "src": "img/roamora.webp",
+        "src": "img/roamora1.png",
         "sizes": "640x1136",
         "type": "image/png"
       },
       {
-        "src": "img/roamora.webp",
+        "src": "img/roamora1.png",
         "sizes": "640x1136",
         "type": "image/png"
       }
